fixed spacing issue homepage

--- a/app/public/assets/css/home.css
+++ b/app/public/assets/css/home.css
@@ -19,7 +19,6 @@
     margin-top: 3%;
     font-weight: bold;
     font-size: 65px;
-    margin-right: 37%;
     margin-top: 13%;
 }
 .bioText {
